css/style.css
body {
  margin: 0px;
  padding: 0;
  background: #5CDB95;
  color: #05386B;
  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
  font-size: 20px;
  text-justify: inter-word;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.NormalDisplay .icon {
	display: none;
}

ul.topnav li {
  float: left;
  display: block;
  margin-right: 15px;
}

p {
  text-align: justify;
}



ul.column li{ 
  display: block;
}

li.column{
  display: block;
}

header {
  background: #05386B;
  color: #EDF5E1;
  padding-left: 15px;
  padding-bottom: 5px;
}

nav {
  overflow: hidden;
  padding: 15px 0px 5px 0;
  text-transform: uppercase;
  font-weight: bold;
  
}

nav a {
  text-align: center;
  margin: 0px 15px 0px 0;
  text-decoration: none;
  font-size: 16px;
  color: #EDF5E1;
}

nav a:hover {
  color: #379683;
  border-bottom: 2px solid #379683; 
}

section {
  padding: 0 10px;
}
section.archive a {
  text-decoration: none;
  color: #05386B;
}

section.archive a:hover {
  border-bottom: 2px solid #05386B;
}

.introduction {
  font-size: 20px;
}

.features {
  background-color: #5CDB95;
  padding: 0px;
  display: flex;
  flex-direction: row;
  margin: 20px;
}
.features ul {
  margin: auto;
  text-align: center;
}
.features ul li {
  margin-bottom: 10px;
}
.features figure {
  margin: auto;
  text-align: center;
  width: 100%;
  font-size: 30px;
  color: #05386B;
}
.features a {
  text-decoration: none;
}
.features figure img {
  width: 80%;
}

div.navi{
  position: absolute;
  bottom: 25px;
  right: 15px;
}
a.navi {
  text-decoration: none;
  display: inline-block;
  padding: 8px 16px;
}
a.navi:hover {
  background-color: #ddd;
  color: black;
}
.previous {
  background-color: #f1f1f1;
  color: black;
}
.next {
  background-color: #4CAF50;
  color: white;
}
.round {
  border-radius: 50%;
}

